@@ -22,7 +22,7 @@
 
 if ($RCMAIL->action == 'group-expand') {
     $abook = $RCMAIL->get_address_book(rcube_utils::get_input_value('_source', rcube_utils::INPUT_GPC));
-    if ($gid = rcube_utils::get_input_value('_gid', rcube_utils::INPUT_GPC)) {
+    if ($gid = rcube_utils::get_input_value('_gid', rcube_utils::INPUT_GET)) {
         $abook->set_group($gid);
         $abook->set_pagesize(9999);  // TODO: limit number of group members by config?
 
